copy edit the fanboat case study * fix nav alignment on mobile

--- a/app/assets/stylesheets/_portfolio-project.scss
+++ b/app/assets/stylesheets/_portfolio-project.scss
@@ -206,6 +206,10 @@ body#portfolio {
           margin: 0;
           width: 48%;
 
+          &.left {
+            text-align: left;
+          }
+
           &.right {
             float: right;
             text-align: right;
